<resources>
    <string name="app_name">Colegio Arjí</string>
    <string name="app_name_short">Colegio Arjí</string>
    <string name="app_lema">Conócete a ti Mismo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigator Bar -->
    <string name="action_inicio">Login</string>
    <string name="action_boletin">Boletin Oficial</string>
    <string name="action_quienes_somos">Quienes Somos</string>
    <string name="action_certificaciones">Certificaciones</string>
    <string name="action_cerrar_session">Logout</string>
    <string name="action_directorio">Directorio</string>
    <string name="action_proceso_admision">Proceso de Admisión</string>
    <string name="action_beneficios">Beneficios</string>
    <string name="action_aviso_privacidad">Aviso de Privacidad</string>
    <string name="action_desarrollador">Desarrollador</string>
    <string name="action_system">Sistema</string>

    <!-- Menu Tutores y Alumnos -->
    <string name="action_tareas">Tareas</string>
    <string name="action_circulares">Circulares</string>
    <string name="action_facturas">Facturas</string>
    <string name="action_pagos">Pagos</string>
    <string name="action_boletas">Boleta</string>

    <string name="title_activity_login">Ingresar al Sistema</string>
    <string name="title_activity_boletin">Boletín Oficial</string>
    <string name="title_activity_hijos">Alumnos</string>
    <string name="title_activity_menu">Alumnos</string>

    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_lactivityn">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="title_activity_menu_hijos">MenuHijos</string>
    <!--
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    -->
    <!-- Cardview Hijos-->
    <string name="headerHijosTable">Alumnos</string>
    <string name="nombreAlumno">label</string>
    <string name="idalu">data</string>
    <string name="cvImgLeftHijos">0.25</string>
    <string name="cvTextHijo">0.75</string>
    <string name="cvImgRightHijos">0.25</string>
    <string name="w1">1</string>
    <string name="title_activity_lista_elementos">ListaElementos</string>

    <!-- Otros -->
    <string name="menu">.</string>
    <string name="idmenu">0</string>

    <string name="elemento">Elemento</string>
    <string name="idelemento">IdElemento</string>
    <string name="idelementodestinatario">IdElementoDestinatario</string>
    <string name="tipoelemento">TipoElemento</string>
    <string name="menuelemento">MenuElemento</string>
    <string name="PDF">PDF</string>
    <string name="Directorio">Directorio</string>
    <string name="Mes">Mes</string>
    <string name="Concepto">Concepto</string>
    <string name="FechaPago">FechaPago</string>
    <string name="Status_Movto">Status_Movto</string>
    <string name="Vencido">Vencido</string>
    <string name="IdConcepto">idconcepto</string>
    <string name="PagosDiv">pagosdiv</string>
    <string name="Username">Username</string>
    <string name="IdUser">IdUser</string>
    <string name="IdUserAlu">IdUserAlu</string>
    <string name="IdGruAlu">IdGruAlu</string>
    <string name="urlBoleta">urlBoleta</string>
    <string name="logoEmp">logoEmp</string>
    <string name="logoIB">logoIB</string>
    <string name="IdEmp">IdEmp</string>
    <string name="IsBoleta">IsBoleta</string>
    <string name="action_mapa_ubicacion">Mapa de Ubicación</string>
    <string name="title_bar_mapa_ubicacion">Av. México Núm. 2, Col. del Bosque, Villahermosa, Tabasco, MX. CP. 86160</string>
    <!-- <string name="gcm_defaultSenderId">1071598435992</string> -->


    <!-- Sistem Info -->
    <string name="token_info_header_label">DATOS IMPORTANTES DEL SISTEMA</string>
    <string name="token_info_label">TOKEN</string>
    <string name="token_id_info_label">TOKEN ID</string>
    <string name="iduser_info_label">ID USER</string>
    <string name="version_info_label">VERSION</string>
    <string name="username_info_label">USERNAME</string>
    <string name="nombrecompletousuario_info_label">USER</string>

    <string name="token_info"></string>
    <string name="token_id_info"></string>
    <string name="iduser_info"></string>
    <string name="version_info"></string>
    <string name="username_info"></string>
    <string name="nombrecompletousuario_info"></string>

</resources>
